--- a/dominion/Makefile
+++ b/dominion/Makefile
@@ -33,6 +33,32 @@ runtests: testDrawCard
 player: player.c interface.o
 	gcc -o player player.c -g  dominion.o rngs.o interface.o $(CFLAGS)
 
+unittestresults: unittest1.c unittest2.c unittest3.c unittest4.c cardtest1.c cardtest2.c cardtest3.c cardtest4.c playdom player
+	gcc -o unittest1 unittest1.c
+	gcc -o unittest2 unittest2.c
+	gcc -o unittest3 unittest3.c
+	gcc -o unittest4 unittest4.c
+	gcc -o cardtest1 cardtest1.c
+	gcc -o cardtest2 cardtest2.c
+	gcc -o cardtest3 cardtest3.c
+	gcc -o cardtest4 cardtest4.c
+	./unittest1 &> unittestresult.out
+	gcov unittest1.c >> unittestresult.out
+	./unittest2 >> unittestresult.out
+	gcov unittest2.c >> unittestresult.out
+	./unittest3 >> unittestresult.out
+	gcov unittest3.c >> unittestresult.out
+	./unittest4 >> unittestresult.out
+	gcov unittest4.c >> unittestresult.out
+	./cardtest1 >> unittestresult.out
+	gcov cardtest1.c >> unittestresult.out
+	./cardtest2 >> unittestresult.out
+	gcov cardtest2.c >> unittestresult.out
+	./cardtest3 >> unittestresult.out
+	gcov cardtest3.c >> unittestresult.out
+	./cardtest4 >> unittestresult.out
+	gcov cardtest4.c >> unittestresult.out
+
 all: playdom player 
 
 clean:
